[package]
name = "newrelic-sys"
description = """
FFI bindings for the New Relic C SDK.
"""
links = "newrelic"
version = "0.2.0"
authors = ["Ben Sully <ben@bsull.io>"]
categories = ["external-ffi-bindings"]
edition = "2018"
repository = "https://github.com/sd2k/newrelic-sys"
license = "MIT/Apache-2.0"

[badges]
maintenance = { status = "passively-maintained" }
